# envire-envire_visualizer

./: .gitignore  CMakeLists.txt  manifest.xml
src/: AddItemDialog.cpp  AddItemDialog.hpp  AddTransformDialog.cpp  AddTransformDialog.hpp  CMakeLists.txt  DoubleSpinboxItemDelegate.cpp  DoubleSpinboxItemDelegate.hpp  EnvireGraphVisualizer.cpp  EnvireGraphVisualizer.hpp  EnvireVisualizerInterface.cpp  EnvireVisualizerInterface.hpp  EnvireVisualizerWindow.cpp  EnvireVisualizerWindow.hpp  Helpers.hpp  ItemManipulatorWidget.cpp  ItemManipulatorWidget.hpp  ItemTableModel.cpp  ItemTableModel.hpp  TransformModel.cpp  TransformModel.hpp  VisualizerMain.cpp  Vizkit3dPluginInformation.cpp  additemdialog.ui  envire_visualizer.pc.in  envire_visualizer_interface-qt5.pc.in  envire_visualizer_interface.pc.in  mainwindow.ui
src/plugins/: CMakeLists.txt  ItemFactoryInterface.hpp  ItemManipulatorFactoryInterface.hpp  ItemManipulatorInterface.hpp
src/plugins/PclPlugin/: CMakeLists.txt  PclItemFactory.cpp  PclItemFactory.hpp  PclManipulator.cpp  PclManipulator.hpp  PclWidget.hpp
src/plugins/SmurfPlugin/: CMakeLists.txt  SmurfItemFactory.cpp  SmurfItemFactory.h  SmurfWidget.hpp
viz/: CMakeLists.txt  EnvireVisualizerPlugin.cpp  EnvireVisualizerPlugin.hpp  EnvireVisualizerWidget.cpp  EnvireVisualizerWidget.hpp  envire_visualizer-viz-qt5.pc.in  envire_visualizer-viz.pc.in  vizkit_plugin.rb  vizkit_widget.rb
